kubernetes/apps/default/emqx/resources/http-route.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: emqx-dashboard
spec:
  parentRefs:
    - name: internal
      namespace: ingress-system
      sectionName: https
  hostnames:
    - emqx.milton.mcf.io
  rules:
    - backendRefs:
        - name: emqx
          port: 18083
